update chức năng ai